# server.js
@@ -9,17 +9,25 @@ const swaggerDocument = require('./swagger-output.json');
 
 const app = express();
 const PORT = process.env.PORT || 5000;
+const  HOST = process.env.HOST || '95.130.227.93';
 
 // Middleware
 app.use(express.json());
-app.use(cors());
+
+const corsOptions = {
+    origin: ['http://paygo.app-center.uz', 'https://paygo.app-center.uz', 'http://localhost:3000'],
+    methods: ['GET', 'POST', 'PUT', 'DELETE', 'OPTIONS'],
+    allowedHeaders: ['Content-Type', 'Authorization'],
+    credentials: true, // Cookie va autentifikatsiya ma'lumotlari uchun
+};
+app.use(cors(corsOptions));
 
 // PostgreSQL ulanishi
 connectDB();
 
 
 // Swagger UI
-app.use('/docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
+app.use('/docs',  cors(corsOptions), swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 
 
 
@@ -30,4 +38,4 @@ app.use('/api/auth', authRoutes);
 app.use('/api/users', userRoutes);
 
 // Serverni ishga tushirish
-app.listen(PORT, () => console.log(`Server running on http://localhost:${PORT}`));
+app.listen(PORT, () => console.log(`Server running on http://${HOST}:${PORT}`));
