# swagger-output.json
@@ -5,9 +5,10 @@
     "title": "Documentation",
     "description": "Docs automatically generated by the <b>Sirojiddin's auto docs</b> module."
   },
-  "host": "10.100.26.2:5000",
+  "host": "95.130.227.93:5000",
   "basePath": "/",
   "schemes": [
+    "https",
     "http"
   ],
   "securityDefinitions": {
@@ -249,7 +250,7 @@
   "components": {
     "securitySchemes": {
       "bearerAuth": {
-        "type": "http",
+        "type": "https",
         "scheme": "bearer"
       }
     }
